use <code>static Integer valueOf(int i)</code> instead new Integer(int)
Integer(int) has been deprecated since version 9 and marked for removal

dto for

new Byte(b) ==> Byte.valueOf(b)
new Character(c) ==> Character.valueOf(c)
Double
Float
Long
Short